--- a/index.html
+++ b/index.html
@@ -59,6 +59,78 @@
     <h1>Ruchir Darji</h1>
     <p>Unity Developer | AR/VR Specialist | Game Creator</p>
   </header>
-  <!-- Content omitted for brevity (same as canvas version) -->
+
+  <section class="section">
+    <h2>About Me</h2>
+    <p>I'm a Unity developer with 7+ years of experience building interactive solutions — from casual mobile games to immersive AR/VR applications. I started my career creating and publishing over 20 Android games, and I continue to be deeply passionate about gaming. In recent years, my focus has expanded to developing AR/VR solutions for industries, including product showcases, virtual collaboration, and immersive meeting environments.</p>
+  </section>
+
+  <section class="section">
+    <h2>Games</h2>
+    <div class="game">
+      <h3>Just Hunting</h3>
+      <p><a href="https://play.unity.com/en/games/91999377-dae8-47a0-a8a1-6ee9d41ac9e3/just-hunting" target="_blank">Play on Unity Play</a></p>
+    </div>
+    <div class="game">
+      <h3>Spelling Shooter</h3>
+      <p><a href="https://play.unity.com/en/games/0a60936a-f0f2-4bf4-923d-5fde2cb657c3/spelling-shooter" target="_blank">Play on Unity Play</a></p>
+    </div>
+    <!-- Add more games similarly -->
+  </section>
+
+  <section class="section">
+    <h2>AR/VR Projects</h2>
+
+    <div class="project">
+      <h3>HR VR (Quest 2)</h3>
+      <p>Virtual HR room with interactions, queries, and games. Internal use for Würth Group.</p>
+      <p><strong>Tools:</strong> Unity3D, VRTK, Photon</p>
+      <img src="images/hr-vr.jpg" alt="HR VR Screenshot" />
+    </div>
+
+    <div class="project">
+      <h3>Collab VR (Quest 2)</h3>
+      <p>Collaborative space with product showcases and interactive tools. Internal use.</p>
+      <p><strong>Tools:</strong> Unity3D, VRTK, Photon</p>
+      <img src="images/collab-vr.jpg" alt="Collab VR Screenshot" />
+    </div>
+
+    <div class="project">
+      <h3>Hikar VR (Quest 3)</h3>
+      <p>Digital factory with live monitoring and basic training modules.</p>
+      <p><strong>Tools:</strong> Unity3D, Photon</p>
+      <img src="images/hikar-vr.jpg" alt="Hikar VR Screenshot" />
+    </div>
+
+    <div class="project">
+      <h3>Hikar MR (Quest 3)</h3>
+      <p>Mixed Reality collaboration and product understanding experience.</p>
+      <p><strong>Tools:</strong> Unity3D, Photon</p>
+      <img src="images/hikar-mr.jpg" alt="Hikar MR Screenshot" />
+    </div>
+
+    <div class="project">
+  <h3>DAKSH Simulator – Training (DRDO)</h3>
+  <p>Freelance project developed to simulate the operation of the DAKSH robot used by the Indian Defence (DRDO). The simulator trains personnel in safe navigation and bomb defusal tasks using realistic scenarios.</p>
+  <p><strong>Tools:</strong> Unity3D, C#, Custom input system</p>
+  <p><strong>Use:</strong> Private deployment for defense training</p>
+  <p><a href="https://drive.google.com/file/d/1ZJ-8Lu_BL26JqptHygvdt3fzkHLYRfVv/preview" target="_blank">▶️ Watch Demo Video</a></p>
+  <iframe src="https://drive.google.com/file/d/1ZJ-8Lu_BL26JqptHygvdt3fzkHLYRfVv/preview" width="100%" height="360" allow="autoplay"></iframe>
+  <img src="images/daksh-simulator.jpg" alt="DAKSH Simulator Screenshot" />
+</div>
+
+  </section>
+
+  <section class="section">
+    <h2>Skills</h2>
+    <p>Unity3D, C#, VRTK, Photon, AR Foundation, Android Studio, Git, Blender (basic), Photoshop (basic)</p>
+  </section>
+
+  <section class="section">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:ruchir.k.darji@gmail.com">ruchir.k.darji@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/ruchir-darji-4981129b/" target="_blank">linkedin.com/in/ruchir-darji-4981129b</a></p>
+    <p>GitHub: <a href="https://github.com/wrooom68" target="_blank">github.com/wrooom68</a></p>
+  </section>
 </body>
 </html>
