--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 
   <section class="section">
     <h2>Skills</h2>
-    <p>Unity3D, C#, VRTK, Photon, AR Foundation, Android Studio, Git, Blender (basic), Photoshop (basic)</p>
+    <p>Unity3D, C#, Virtual Reality, Augmented Reality, Photon, AR Foundation, Android Studio, Git, Playfab, IoT (Internet of Things), Project Management</p>
   </section>
 
   <section class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:ruchir.k.darji@gmail.com">ruchir.k.darji@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/ruchir-darji-4981129b/" target="_blank">linkedin.com/in/ruchir-darji-4981129b</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/6ruchir8/" target="_blank">linkedin.com/in/6ruchir8</a></p>
     <p>GitHub: <a href="https://github.com/wrooom68" target="_blank">github.com/wrooom68</a></p>
   </section>
 </body>
