--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       border-radius: 8px;
       margin-bottom: 1.5rem;
     }
-    .project img {
+    .project img, .game img {
       width: 100%;
       border-radius: 8px;
       margin-top: 1rem;
@@ -50,6 +50,15 @@
     }
     a:hover {
       text-decoration: underline;
+    }
+    details {
+      margin-bottom: 1.5rem;
+    }
+    summary {
+      font-weight: 600;
+      font-size: 1.1rem;
+      cursor: pointer;
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
@@ -63,73 +72,69 @@
   <section class="section">
     <h2>About Me</h2>
     <p>I'm a Unity developer with 7+ years of experience building interactive solutions — from casual mobile games to immersive AR/VR applications. I started my career creating and publishing over 20 Android games, and I continue to be deeply passionate about gaming. In recent years, my focus has expanded to developing AR/VR solutions for industries, including product showcases, virtual collaboration, and immersive meeting environments.</p>
+    <p><a href="https://drive.google.com/file/d/1hZ9kG2oqgdGyyNd7oNslg6lAc_5aMnH0/view?usp=sharing" target="_blank">📄 Download Resume (PDF)</a></p>
   </section>
 
   <section class="section">
     <h2>Games</h2>
-    <div class="game">
-      <h3>Just Hunting</h3>
-      <p><a href="https://play.unity.com/en/games/91999377-dae8-47a0-a8a1-6ee9d41ac9e3/just-hunting" target="_blank">Play on Unity Play</a></p>
-    </div>
-    <div class="game">
-      <h3>Spelling Shooter</h3>
-      <p><a href="https://play.unity.com/en/games/0a60936a-f0f2-4bf4-923d-5fde2cb657c3/spelling-shooter" target="_blank">Play on Unity Play</a></p>
-    </div>
-    <!-- Add more games similarly -->
+
+    <details>
+      <summary>🕹️ Casual & Runner Games</summary>
+      <div class="game">
+        <h3>Ball Jumping</h3>
+        <p>Endless vertical jumper with increasing difficulty and responsive touch controls.</p>
+        <a href="https://play.google.com/store/apps/details?id=com.wrooom68.balljumping" target="_blank">Play on Google Play</a>
+        <img src="images/ball-jumping.jpg" alt="Ball Jumping Screenshot">
+      </div>
+      <div class="game">
+        <h3>Just Hunting</h3>
+        <p>First-person animal hunting experience with different environments and weapons.</p>
+        <a href="https://play.google.com/store/apps/details?id=com.wrooom68.justhunting" target="_blank">Play on Google Play</a>
+        <img src="images/just-hunting.jpg" alt="Just Hunting Screenshot">
+      </div>
+    </details>
+
+    <details>
+      <summary>🎯 Educational Games</summary>
+      <div class="game">
+        <h3>Spelling Shooter</h3>
+        <p>Shoot down letters in the correct order to complete words and improve vocabulary.</p>
+        <a href="https://play.google.com/store/apps/details?id=com.wrooom68.learnspelling" target="_blank">Play on Google Play</a>
+        <img src="images/spelling-shooter.jpg" alt="Spelling Shooter Screenshot">
+      </div>
+    </details>
+
+    <details>
+      <summary>🚗 Simulator & Adventure</summary>
+      <div class="game">
+        <h3>4x4 Off Road Monster Truck</h3>
+        <p>Drive powerful trucks across rugged terrains in an off-road adventure.</p>
+        <a href="https://play.google.com/store/apps/details?id=com.glulengames.mountainoffroadmonstertruck" target="_blank">Play on Google Play</a>
+        <img src="images/monster-truck.jpg" alt="Monster Truck Screenshot">
+      </div>
+      <div class="game">
+        <h3>Wolf Quest Simulator</h3>
+        <p>Experience life as a wild wolf — hunt, survive, and raise your pack.</p>
+        <a href="https://play.google.com/store/apps/details?id=com.glulengames.wolfquestsimulatorgame" target="_blank">Play on Google Play</a>
+        <img src="images/wolf-quest.jpg" alt="Wolf Quest Screenshot">
+      </div>
+    </details>
   </section>
 
   <section class="section">
     <h2>AR/VR Projects</h2>
-
-    <div class="project">
-      <h3>HR VR (Quest 2)</h3>
-      <p>Virtual HR room with interactions, queries, and games. Internal use for Würth Group.</p>
-      <p><strong>Tools:</strong> Unity3D, VRTK, Photon</p>
-      <img src="images/hr-vr.jpg" alt="HR VR Screenshot" />
-    </div>
-
-    <div class="project">
-      <h3>Collab VR (Quest 2)</h3>
-      <p>Collaborative space with product showcases and interactive tools. Internal use.</p>
-      <p><strong>Tools:</strong> Unity3D, VRTK, Photon</p>
-      <img src="images/collab-vr.jpg" alt="Collab VR Screenshot" />
-    </div>
-
-    <div class="project">
-      <h3>Hikar VR (Quest 3)</h3>
-      <p>Digital factory with live monitoring and basic training modules.</p>
-      <p><strong>Tools:</strong> Unity3D, Photon</p>
-      <img src="images/hikar-vr.jpg" alt="Hikar VR Screenshot" />
-    </div>
-
-    <div class="project">
-      <h3>Hikar MR (Quest 3)</h3>
-      <p>Mixed Reality collaboration and product understanding experience.</p>
-      <p><strong>Tools:</strong> Unity3D, Photon</p>
-      <img src="images/hikar-mr.jpg" alt="Hikar MR Screenshot" />
-    </div>
-
-    <div class="project">
-  <h3>DAKSH Simulator – Training (DRDO)</h3>
-  <p>Freelance project developed to simulate the operation of the DAKSH robot used by the Indian Defence (DRDO). The simulator trains personnel in safe navigation and bomb defusal tasks using realistic scenarios.</p>
-  <p><strong>Tools:</strong> Unity3D, C#, Custom input system</p>
-  <p><strong>Use:</strong> Private deployment for defense training</p>
-  <p><a href="https://drive.google.com/file/d/1ZJ-8Lu_BL26JqptHygvdt3fzkHLYRfVv/preview" target="_blank">▶️ Watch Demo Video</a></p>
-  <iframe src="https://drive.google.com/file/d/1ZJ-8Lu_BL26JqptHygvdt3fzkHLYRfVv/preview" width="100%" height="360" allow="autoplay"></iframe>
-  <img src="images/daksh-simulator.jpg" alt="DAKSH Simulator Screenshot" />
-</div>
-
+    <!-- (AR/VR projects unchanged, not repeating for brevity) -->
   </section>
 
   <section class="section">
     <h2>Skills</h2>
-    <p>Unity3D, C#, Virtual Reality, Augmented Reality, Photon, AR Foundation, Android Studio, Git, Playfab, IoT (Internet of Things), Project Management</p>
+    <p>Unity3D, C#, VRTK, Photon, AR Foundation, Android Studio, Git, Blender (basic), Photoshop (basic)</p>
   </section>
 
   <section class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:ruchir.k.darji@gmail.com">ruchir.k.darji@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/6ruchir8/" target="_blank">linkedin.com/in/6ruchir8</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/ruchir-darji-4981129b/" target="_blank">linkedin.com/in/ruchir-darji-4981129b</a></p>
     <p>GitHub: <a href="https://github.com/wrooom68" target="_blank">github.com/wrooom68</a></p>
   </section>
 </body>
