--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
         <h3>Spelling Shooter</h3>
       </div>
     </div>
-    <div id="more-games">
-      <div class="game-grid">
+    
+        <div class="game-card" onclick="window.open('https://play.google.com/store/apps/details?id=com.EduIsFun.EduIsFun&hl=en')">
+          <img src="images/eduisfun.gif" alt="Eduisfun">
+          <h3>Eduisfun</h3>
+        </div>
         <div class="game-card" onclick="window.open('https://play.google.com/store/apps/details?id=com.glulengames.mountainoffroadmonstertruck')">
           <img src="images/monster-truck.gif" alt="Monster Truck">
           <h3>4x4 Monster Truck</h3>
@@ -128,13 +131,42 @@
   </section>
 
   <section class="section">
-    <h2>AR / VR / MR Projects</h2>
-    <p>I have developed AR apps for mobile devices, VR simulations for Oculus Quest, and MR collaboration environments on Quest 3. These projects include interactive product showcases, remote training modules, digital factories, and immersive meeting spaces for enterprise use.</p>
-  </section>
+  <h2>AR / VR / MR Projects</h2>
+  <div class="game-grid">
+    <div class="game-card">
+      <img src="images/hr-vr.gif" alt="HR VR">
+      <h3>HR VR – Quest 2</h3>
+    </div>
+    <div class="game-card">
+      <img src="images/collab-vr.gif" alt="Collab VR">
+      <h3>Collab VR – Quest 2</h3>
+    </div>
+    <div class="game-card">
+      <img src="images/hikar-vr.gif" alt="Hikar VR">
+      <h3>Hikar VR – Quest 3</h3>
+    </div>
+    <div class="game-card">
+      <img src="images/hikar-mr.gif" alt="Hikar MR">
+      <h3>Hikar MR – Quest 3</h3>
+    </div>
+  </div>
+  <p style="margin-top: 1rem;">Projects include AR product demos, VR collaboration and training spaces, and MR factory visualizations for enterprise use.</p>
+</section>
+
+<section class="section">
+  <h2>PC Projects</h2>
+  <div class="game-grid">
+    <div class="game-card" onclick="window.open('https://drive.google.com/file/d/1ZJ-8Lu_BL26JqptHygvdt3fzkHLYRfVv/preview')">
+      <img src="images/daksh-simulator.gif" alt="DAKSH Simulator">
+      <h3>DAKSH Simulator (DRDO)</h3>
+    </div>
+  </div>
+  <p style="margin-top: 1rem;">A PC-based simulator for training Indian defense personnel on the operation of the DAKSH robot for navigation and bomb defusal.</p>
+</section>
 
   <section class="section">
-    <h2>Skills</h2>
-    <p>Unity3D, C#, Photon, AR Foundation, Android Studio, Git, AR/VR/MR, Project Management, Internet of Things</p>
+  <h2>Skills</h2>
+  <p>Unity3D, C#, Photon, AR Foundation, Android Studio, Git, AR/VR/MR, Project Management, Internet of Things</p>
   </section>
 
   <section class="section">
