--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="images/flying-car.jpg" alt="Flying Car Stunt"><h3>Flying Car Stunt</h3>
       </div>
     </div>
-        <div id="more-games" style.display="block">
+        <div id="more-games" style="display: block;">
       <div class="game-grid">
         <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
         <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
