--- a/index.html
+++ b/index.html
@@ -95,6 +95,26 @@
         <img src="images/dino-grand.jpg" alt="Dino Grand City"><h3>Dino Grand City</h3>
       </div>
     </div>
+     <div id="more-games" style="display: none;">
+      <div class="game-grid">
+        <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
+        <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
+        <div class="game-card"><img src="images/wolf-quest.gif"><h3>Wolf Quest</h3></div>
+        <div class="game-card"><img src="images/lion-quest.gif"><h3>Lion Quest</h3></div>
+      </div>
+    </div>
+    <button onclick="
+      const more = document.getElementById('more-games');
+      const btn = this;
+      if (more.style.display === 'block') {
+        more.style.display = 'none';
+        btn.textContent = 'Show More';
+      } else {
+        more.style.display = 'block';
+        btn.textContent = 'Show Less';
+      }
+    ">Show More</button>
+  </div>
   </section>
 
   <section class="section">
@@ -110,6 +130,26 @@
         <img src="images/arjun.jpg" alt="Arjun – Prince of Bali"><h3>Arjun – Prince of Bali</h3>
       </div>
     </div>
+     <div id="more-games" style="display: none;">
+      <div class="game-grid">
+        <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
+        <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
+        <div class="game-card"><img src="images/wolf-quest.gif"><h3>Wolf Quest</h3></div>
+        <div class="game-card"><img src="images/lion-quest.gif"><h3>Lion Quest</h3></div>
+      </div>
+    </div>
+    <button onclick="
+      const more = document.getElementById('more-games');
+      const btn = this;
+      if (more.style.display === 'block') {
+        more.style.display = 'none';
+        btn.textContent = 'Show More';
+      } else {
+        more.style.display = 'block';
+        btn.textContent = 'Show Less';
+      }
+    ">Show More</button>
+  </div>
   </section>
 
   <section class="section">
@@ -125,6 +165,26 @@
         <img src="images/inside-out.jpg" alt="Inside Out"><h3>Inside Out Bubbles</h3>
       </div>
     </div>
+     <div id="more-games" style="display: none;">
+      <div class="game-grid">
+        <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
+        <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
+        <div class="game-card"><img src="images/wolf-quest.gif"><h3>Wolf Quest</h3></div>
+        <div class="game-card"><img src="images/lion-quest.gif"><h3>Lion Quest</h3></div>
+      </div>
+    </div>
+    <button onclick="
+      const more = document.getElementById('more-games');
+      const btn = this;
+      if (more.style.display === 'block') {
+        more.style.display = 'none';
+        btn.textContent = 'Show More';
+      } else {
+        more.style.display = 'block';
+        btn.textContent = 'Show Less';
+      }
+    ">Show More</button>
+  </div>
   </section>
 
   <!-- AR/VR Section -->
@@ -136,6 +196,26 @@
       <div class="game-card"><img src="images/hikar-vr.jpg"><h3>Hikar VR – Quest 3</h3></div>
       <div class="game-card"><img src="images/hikar-mr.jpg"><h3>Hikar MR – Quest 3</h3></div>
     </div>
+     <div id="more-games" style="display: none;">
+      <div class="game-grid">
+        <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
+        <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
+        <div class="game-card"><img src="images/wolf-quest.gif"><h3>Wolf Quest</h3></div>
+        <div class="game-card"><img src="images/lion-quest.gif"><h3>Lion Quest</h3></div>
+      </div>
+    </div>
+    <button onclick="
+      const more = document.getElementById('more-games');
+      const btn = this;
+      if (more.style.display === 'block') {
+        more.style.display = 'none';
+        btn.textContent = 'Show More';
+      } else {
+        more.style.display = 'block';
+        btn.textContent = 'Show Less';
+      }
+    ">Show More</button>
+  </div>
   </section>
 
   <!-- PC Section -->
