--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <img src="images/dino-grand.jpg" alt="Dino Grand City"><h3>Dino Grand City</h3>
       </div>
     </div>
-     <div id="more-games" style="display: none;">
+     <div id="ads-more-games" style="display: none;">
       <div class="game-grid">
         <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
         <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
@@ -104,7 +104,7 @@
       </div>
     </div>
     <button onclick="
-      const more = document.getElementById('more-games');
+      const more = document.getElementById('ads-more-games');
       const btn = this;
       if (more.style.display === 'block') {
         more.style.display = 'none';
@@ -130,7 +130,7 @@
         <img src="images/arjun.jpg" alt="Arjun – Prince of Bali"><h3>Arjun – Prince of Bali</h3>
       </div>
     </div>
-     <div id="more-games" style="display: none;">
+     <div id="aer-more-games" style="display: none;">
       <div class="game-grid">
         <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
         <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
@@ -139,7 +139,7 @@
       </div>
     </div>
     <button onclick="
-      const more = document.getElementById('more-games');
+      const more = document.getElementById('aer-more-games');
       const btn = this;
       if (more.style.display === 'block') {
         more.style.display = 'none';
@@ -165,7 +165,7 @@
         <img src="images/inside-out.jpg" alt="Inside Out"><h3>Inside Out Bubbles</h3>
       </div>
     </div>
-     <div id="more-games" style="display: none;">
+     <div id="epg-more-games" style="display: none;">
       <div class="game-grid">
         <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
         <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
@@ -174,7 +174,7 @@
       </div>
     </div>
     <button onclick="
-      const more = document.getElementById('more-games');
+      const more = document.getElementById('epg-more-games');
       const btn = this;
       if (more.style.display === 'block') {
         more.style.display = 'none';
@@ -196,7 +196,7 @@
       <div class="game-card"><img src="images/hikar-vr.jpg"><h3>Hikar VR – Quest 3</h3></div>
       <div class="game-card"><img src="images/hikar-mr.jpg"><h3>Hikar MR – Quest 3</h3></div>
     </div>
-     <div id="more-games" style="display: none;">
+     <div id="avm-more-games" style="display: none;">
       <div class="game-grid">
         <div class="game-card"><img src="images/eduisfun.gif"><h3>Eduisfun</h3></div>
         <div class="game-card"><img src="images/monster-truck.gif"><h3>4x4 Monster Truck</h3></div>
@@ -205,7 +205,7 @@
       </div>
     </div>
     <button onclick="
-      const more = document.getElementById('more-games');
+      const more = document.getElementById('avm-more-games');
       const btn = this;
       if (more.style.display === 'block') {
         more.style.display = 'none';
