--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <h2>Educational & Puzzle Games</h2>
     <div class="game-grid">
       <div class="game-card" onclick="window.open('https://play.google.com/store/apps/details?id=com.MobicloudTechnologies.FishWorld')">
-        <img src="images/fish-world.jpg" alt="Fish world"><h3>Fish world</h3>
+        <img src="images/fish-world.png" alt="Fish world"><h3>Fish world</h3>
       </div>
       <div class="game-card" onclick="window.open('https://play.google.com/store/apps/details?id=com.wrooom68.learnspelling')">
         <img src="images/spelling-shooter.jpg" alt="Spelling Shooter"><h3>Spelling Shooter</h3>
