--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
             cursor: pointer;
         }
 
-        .game-card img {
-            width: 100%;
-            height: 120px;
-            object-fit: cover;
+.game-card img {
+            width: 200px;
+            height: 150px;
+            object-fit: contain;
+            display: block;
+            margin: 0 auto 0.5rem auto;
             border-radius: 6px;
-            margin-bottom: 0.5rem;
-        }
-
+            background-color: #333;
+            }
         a {
             color: #90caf9;
             text-decoration: none;
